--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- TODO: Install Tailwind CSS as a PostCSS plugin or use the Tailwind CLI -->
     
     <link rel="stylesheet" href="css/styles.css">
   </head>
