--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css?v=1">
   </head>
   <body class="text-gray-800">
 
