--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     
     <link rel="stylesheet" href="css/styles.css?v=1">
+    <link rel="stylesheet" href="css/custom-styles.css">
   </head>
   <body class="text-gray-800">
 
