fix(css): add missing admin control visibility rules

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     
     <link rel="stylesheet" href="css/styles.css?v=1">
-    <link rel="stylesheet" href="css/custom-styles.css">
+    <link rel="stylesheet" href="css/custom-styles.css?v=1.0">
   </head>
   <body class="text-gray-800">
 
