--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       <div id="admin-hero-controls-container"></div>
       <div id="jams-container"></div>
       <div id="admin-jam-controls-container"></div>
+    <div id="admin-default-jam-controls-container"></div>
       <div id="format-container"></div>
       <div id="events-container"></div>
       <div id="admin-event-controls-container"></div>
