Feat: Refactor admin UI into a tabbed interface
This commit introduces a major refactoring of the admin user interface based on user feedback.

- Consolidates all admin controls into a single, tabbed admin panel for better organization and user experience.
- Replaces the scattered admin sections with a unified component (`admin-panel.html`).
- The default jam settings now feature a dropdown menu to select from existing venues, preventing errors and improving workflow.
- The date testing module has been de-emphasized by moving it into a collapsible section.

--- a/public/index.html
+++ b/public/index.html
@@ -21,17 +21,12 @@
     
     <main>
       <div id="hero-container"></div>
-      <div id="admin-hero-controls-container"></div>
+      <div id="admin-panel-container"></div>
       <div id="jams-container"></div>
-      <div id="admin-jam-controls-container"></div>
-    <div id="admin-default-jam-controls-container"></div>
       <div id="format-container"></div>
       <div id="events-container"></div>
-      <div id="admin-event-controls-container"></div>
       <div id="community-container"></div>
-      <div id="admin-community-controls-container"></div>
       <div id="gallery-container"></div>
-      <div id="admin-gallery-controls-container"></div>
       <div id="contact-container"></div>
     </main>
 
