Feat: Apply new design system based on Galway City Council styles
This commit implements a major redesign of the website based on the styles of the Galway City Council.

- A new design system has been implemented using CSS variables and Tailwind CSS.
- All components have been updated to use the new fonts, colors, and spacing.
- This creates a more professional and consistent look and feel for the site.

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     
     <link rel="stylesheet" href="css/styles.css?v=1">
     <link rel="stylesheet" href="css/custom-styles.css?v=1.0">
+    <link rel="stylesheet" href="css/gcc-theme.css">
   </head>
   <body class="text-gray-800">
 
