Feat: Add maroon stylesheet and theme switcher

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/styles.css?v=1">
     <link rel="stylesheet" href="css/custom-styles.css?v=1.0">
     <link rel="stylesheet" href="css/gcc-theme.css">
+    <link rel="stylesheet" href="css/maroon.css" id="maroon-theme-link" disabled>
   </head>
   <body class="text-gray-800">
 
