--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
     
     <link rel="stylesheet" href="css/styles.css?v=1">
     <link rel="stylesheet" href="css/custom-styles.css?v=1.0">
-    <link rel="stylesheet" href="css/gcc-theme.css">
-    <link rel="stylesheet" href="css/maroon.css" id="maroon-theme-link" disabled>
+    <link rel="stylesheet" href="css/main.css?v=1.0">
+    <link rel="stylesheet" href="css/themes/default.css" id="theme-link">
   </head>
   <body class="text-gray-800">
 
