feat: Implement modular, token-based theming system
Replaces the previous theme implementation with a modern, two-layer design token system based on CSS Custom Properties.

- Consolidates all style definitions into a single source of truth: `public/css/theme.css`.
- Creates a modular JavaScript theme manager (`theme-switcher.js`) that persists user preference to localStorage.
- Preserves the exact look of the default (purple) theme.
- Implements a new, thoughtfully designed "Maroon" theme with a complementary color palette.
- The new system is easily extensible for future themes.

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,7 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     
     <link rel="stylesheet" href="css/styles.css?v=1">
-    <link rel="stylesheet" href="css/custom-styles.css?v=2.0">
-    <link rel="stylesheet" href="css/theme.css?v=2.0">
+    <link rel="stylesheet" href="css/theme.css?v=3.0">
   </head>
   <body class="default-theme">
 
@@ -36,6 +35,10 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
     <script type="module" src="js/main.js"></script>
+
+  </body>
+</html>
+js/main.js"></script>
 
   </body>
 </html>
