--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,9 @@
     
     <link rel="stylesheet" href="css/styles.css?v=1">
     <link rel="stylesheet" href="css/theme.css?v=3.0">
+    <link rel="stylesheet" href="css/components.css">
   </head>
-  <body class="default-theme">
+  <body>
 
     <header id="header-container"></header>
     
