--- a/public/index.html
+++ b/public/index.html
@@ -30,16 +30,30 @@
     </main>
 
     <footer id="footer-container"></footer>
-    <div id="modal-container"></div>
+        <div id="modal-container">
+      <div
+        id="custom-modal"
+        class="fixed inset-0 bg-black/50 z-50 hidden items-center justify-center"
+      >
+        <form id="modal-form" class="bg-white p-6 rounded-lg shadow-xl max-w-sm w-full mx-4">
+          <p id="modal-message" class="text-lg mb-4"></p>
+          <input type="username" autocomplete="username" class="hidden">
+          <input
+            type="password"
+            id="modal-input"
+            class="w-full p-2 border rounded mb-4 hidden"
+            placeholder="Enter PIN..."
+            autocomplete="current-password"
+          />
+          <div id="modal-buttons" class="flex justify-end space-x-4"></div>
+        </form>
+      </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
     <script type="module" src="js/main.js"></script>
-
-  </body>
-</html>
-js/main.js"></script>
 
   </body>
 </html>
