fix: Remove broken script and hide admin panel in index2.html

--- a/public/index2.html
+++ b/public/index2.html
@@ -1748,7 +1748,7 @@ body.admin-mode .admin-controls-inline {
       </section>
 
 <div class="admin-controls-container"></div></div>
-      <div id="admin-panel-container"><div class="admin-panel-tab-content" id="logo-settings">
+      <div id="admin-panel-container" style="display: none;"><div class="admin-panel-tab-content" id="logo-settings">
     <h3 class="text-2xl font-bold text-primary mb-4 font-secondary">Site Logo Settings</h3>
     <div class="text-center mb-4 admin-controls">
         <button id="edit-site-logo-btn" class="px-4 py-2 bg-blue text-white font-bold rounded-full hover:bg-opacity-80">Change Site Logo</button>
@@ -2177,7 +2177,7 @@ body.admin-mode .admin-controls-inline {
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
-    <script type="module" src="js/main.js"></script>
+
 
   </body>
 </html>
