Comprehensive visual audit fixes and improvements

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/components.css">
   </head>
   <body>
+    <div id="loading-container"></div>
 
     <header id="header-container"></header>
     
