DEBUG: Add visible test elements to confirm deployment

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
     <link rel="stylesheet" href="css/components.css">
   </head>
   <body>
+    <div style="position: fixed; top: 0; left: 0; right: 0; background: red; color: white; text-align: center; padding: 20px; z-index: 99999; font-size: 24px; font-weight: bold;">
+      DEBUG: DEPLOYMENT TEST - VERSION 2024-12-12-23:44 - IF YOU SEE THIS, CHANGES ARE DEPLOYING
+    </div>
     <div id="loading-container"></div>
 
     <header id="header-container"></header>
